--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tsndr/cloudflare-worker-jwt": "^3.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "currency-codes-ts": "^3.0.0",
     "lucide-react": "^0.511.0",
     "pouchdb": "^9.0.0",
     "react": "^19.1.0",
