--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "currency-codes-ts": "^3.0.0",
+    "events": "^3.3.0",
     "lucide-react": "^0.511.0",
     "pouchdb": "^9.0.0",
+    "pouchdb-browser": "^9.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
