--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "@tsndr/cloudflare-worker-jwt": "^3.1.5",
@@ -36,14 +38,17 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "currency-codes-ts": "^3.0.0",
+    "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "lucide-react": "^0.511.0",
     "pouchdb-browser": "^9.0.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
     "tailwind-merge": "^3.3.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.28"
   },
   "devDependencies": {
