--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "cmdk": "^1.1.1",
     "currency-codes-ts": "^3.0.0",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "events": "^3.3.0",
     "itty-router": "^5.0.18",
     "lucide-react": "^0.511.0",
@@ -50,7 +52,10 @@
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.1",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
+    "y-indexeddb": "^9.0.12",
+    "yjs": "^13.6.27",
     "zod": "^3.25.28"
   },
   "devDependencies": {
