--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "vite-plugin-mkcert": "^1.17.8",
     "@cloudflare/vite-plugin": "^1.5.1",
     "@eslint/js": "^9.25.0",
     "@testing-library/jest-dom": "^6.6.3",
