--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "vite": "^6.3.5",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-pwa": "^1.0.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.1.4",
     "workbox-window": "^7.3.0",
     "wrangler": "^4.16.1"
