--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "@tsndr/cloudflare-worker-jwt": "^3.1.5",
+    "binary-search": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
