--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.1",
     "react-virtualized": "^9.22.6",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
